# kikuyu-language-hub

./: .gitignore  ADULT_CONTENT_TAGGING_SYSTEM.md  CLAUDE.md  CONTENT_SYNC_SETUP.md  Caddyfile  IMPLEMENTATION_REPORT.md  IMPLEMENTATION_TASKS.md  README.md  TASKLIST.md  WARP.md  bash.exe.stackdump  build_paste_into_file.py  copy-prompt.ps1  logfile  nginx.conf  paste-into-file.py  paste-into-file.spec  scrape_netlify.py  scrape_wiktionary.py  sync-android-content.py  sync-curated-content.bat  sync-curated-content.py  sync-curated-content.sh  sync-mobile-data.ps1  the-kikuyu-language.txt  verify-sync.sh  wikipedia-kikuyu-language.txt
backend/: .env.example  Dockerfile  MODERN_SCHEMA_MIGRATION_SUMMARY.md  alembic.ini  convert-to-modern-schema.py  copy-modern-to-android.py  copy-modern-to-web.py  count-entries.py  create-clean-content-files.py  create-consolidated-entries.py  create-direct-asset-file.py  create-legacy-json-file-fixed.py  create-legacy-json-file.py  create-single-unified-file.py  create-study-mode-file.py  debug-android-content.py  debug-android-loading.py  debug-content-loading.py  easy_kikuyu_analysis.json  easy_kikuyu_analyzer.py  easy_kikuyu_extracted.json  easy_kikuyu_extractor.py  export_flashcard_json.py  extract_wiktionary_literals.py  find-379-source.py  find-duplicate-entries.py  fix-all-entries-metadata.py  fix-vocabulary-quality-fields.py  integrate-split-entries.py  kikuyu_language_hub.db  manual-split-translations.py  optimal-flashcard-schema.json  process-flagged-translations.py  pyproject.toml  remove-flagged-originals.py  schema-yaml.py  (+3 more)
(+1614 files in other folders)
